--- a/config/west.yml
+++ b/config/west.yml
@@ -1,7 +1,8 @@
+manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: Lequoctrong
+    - name: lequoctrong
       url-base: https://github.com/hachachac159
     - name: zmkfirmware-infused-kim
       url-base: https://github.com/infused-kim
