--- a/config/boards/arm/ms60/ms60_defconfig
+++ b/config/boards/arm/ms60/ms60_defconfig
@@ -24,6 +24,7 @@ CONFIG_SETTINGS_NVS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
