--- a/config/boards/arm/ms60/ms60.dts
+++ b/config/boards/arm/ms60/ms60.dts
@@ -9,6 +9,7 @@
 
 #include <dt-bindings/led/led.h>
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <dt-bindings/zmk/outputs.h>
 
 / {
 	model = "MS60";
