--- a/config/boards/arm/ms60/ms60.dts
+++ b/config/boards/arm/ms60/ms60.dts
@@ -170,26 +170,26 @@
 		};
 		code_partition: partition@26000 {
 			label = "code_partition";
-			reg = <0x00026000 0x000c6000>;
+			reg = <0x00026000 0x00046000>;
 		};
 
 		/*
-		 * The flash starting at 0x000ec000 and ending at
-		 * 0x000f3fff is reserved for use by the application.
+		 * The flash starting at 0x0006c000 and ending at
+		 * 0x00073fff is reserved for use by the application.
 		 */
 
 		/*
 		 * Storage partition will be used by FCB/LittleFS/NVS
 		 * if enabled.
 		 */
-		storage_partition: partition@ec000 {
+		storage_partition: partition@6c000 {
 			label = "storage";
-			reg = <0x000ec000 0x00008000>;
+			reg = <0x0006c000 0x00008000>;
 		};
 
-		boot_partition: partition@f4000 {
+		boot_partition: partition@74000 {
 			label = "adafruit_boot";
-			reg = <0x000f4000 0x0000c000>;
+			reg = <0x00074000 0x0000c000>;
 		};
 	};
 };
